--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <base href="/" />
-    <title>Angular 10 - User Registration and Login Example</title>
+    <title>Visualization Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
 </head>
 <body>
     <app>Loading...</app>
