--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <h5 class="text-uppercase text-center" style="font-family: fantasy;">contact us</h5>
-          <p>
+          <p class="font-16">
             <i class="fab fa-line"></i>
             Line : @visualizationplatform</p>
-          <p>
+          <p class="font-16">
             <i class="fa fa-phone-square"></i>
             Phone : 02-222-2222
           </p>
-          <p>
+          <p class="font-16">
             <i class="fa fa-envelope"></i>
             Email : visualplatform@gmail.com
           </p>
