--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <app>Loading...</app>
 </body>
 
-<footer class="footer">
+<!--footer class="footer">
     <div class="container p-3">
       <div class="row">
         <div class="col-md-8 offset-md-2">
@@ -34,5 +34,5 @@
       </div>
       <hr>
     </div>
-  </footer>
+  </footer-->
 </html>
